fix: Account Menu spacing 🎨

--- a/src/ducks/account/AccountSwitch.styl
+++ b/src/ducks/account/AccountSwitch.styl
@@ -61,13 +61,13 @@
     margin-right auto
 
     +small-screen()
-        left 10px
-        right 10px
+        left 30px
+        right 30px
+        top 30px
         margin-left inherit
         width auto
 
 .account-switch-menu
-    margin 20px
     padding 0
     z-index 1
     overflow auto
