feat(notifications): add urls on mails

--- a/src/ducks/notifications/html/templates/style.css
+++ b/src/ducks/notifications/html/templates/style.css
@@ -16,6 +16,11 @@ h1,h2,h3,h4,h5,h6{
 }
 
 /* header */
+.header__title a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .header__desc {
   white-space: nowrap;
   text-align: right;
