--- a/src/ducks/notifications/html/templates/balance-lower.hbs
+++ b/src/ducks/notifications/html/templates/balance-lower.hbs
@@ -7,6 +7,13 @@
   {{/content}}
 
   {{#content "content"}}
+    <mj-section>
+      <mj-column>
+        <mj-text>
+          <a href="{{ balancesUrl }}">Accéder à mes comptes</a>
+        </mj-text>
+      </mj-column>
+    </mj-section>
     {{#each institutions as |institution| }}
       <mj-section css-class="account" padding-top="0" padding-bottom="10px">
         <mj-column>
