--- a/src/ducks/notifications/html/templates/cozy-layout.hbs
+++ b/src/ducks/notifications/html/templates/cozy-layout.hbs
@@ -50,10 +50,12 @@
               <mj-table width="auto" css-class="header__title" cellpadding='4px'>
                 <tr>
                   <td width="30px">
-                    <img align="left" width="30px" src="{{#block 'logoUrl'}}{{/block}}" alt="{{#block 'appName'}}{{/block}}" />
+                    <a href="{{banksUrl}}">
+                      <img align="left" width="30px" src="{{#block 'logoUrl'}}{{/block}}" alt="{{#block 'appName'}}{{/block}}" />
+                    </a>
                   </td>
                   <td>
-                    <h1 style="line-height: 32px">{{#block 'appName'}}{{/block}}</h1>
+                    <h1 style="line-height: 32px"><a href="{{banksUrl}}">{{#block 'appName'}}{{/block}}</a></h1>
                   </td>
                 </tr>
               </mj-table>
@@ -91,6 +93,7 @@
           <mj-column>
             {{#block 'footerRight' }}
             <mj-text css-class="footer__help">
+              <a css-class="footer__help" href="{{settingsUrl}}">Paramètres</a>
               <a css-class="footer__help" href="https://support.cozy.io/">
                 Aide et support
               </a>
