feat(notifications): update static assets URL

--- a/src/ducks/notifications/html/templates/bank-layout.hbs
+++ b/src/ducks/notifications/html/templates/bank-layout.hbs
@@ -1,5 +1,5 @@
 {{#extend "cozy-layout"}}
-  {{#content "logoUrl"}}https://files.cozycloud.cc/bank/email-assets/logo-bank.png{{/content}}
+  {{#content "logoUrl"}}https://downcloud.cozycloud.cc/upload/cozy-banks/email-assets/logo-bank.png{{/content}}
 
   {{#content "appName"}}
     Banks
