--- a/src/ducks/notifications/html/templates/cozy-layout.hbs
+++ b/src/ducks/notifications/html/templates/cozy-layout.hbs
@@ -37,7 +37,7 @@
     <mj-container background-color="#f5f6f7">
       <mj-section padding-top="0" padding-bottom="0">
         <mj-column>
-          <mj-image width="100px" src="https://files.cozycloud.cc/bank/email-assets/logo-cozy.png" />
+          <mj-image width="100px" src="https://downcloud.cozycloud.cc/upload/cozy-banks/email-assets/logo-cozy.png" />
         </mj-column>
       </mj-section>
 
