--- a/src/components/SelectDates/SelectDates.styl
+++ b/src/components/SelectDates/SelectDates.styl
@@ -63,9 +63,8 @@ select-date-height-small = 2.75rem
         width 100%
 
         select
-            padding-left 0.875rem
             width 100%
-            height 100%
+            margin-right -1.3rem
 
         svg
             color coolGrey
@@ -97,10 +96,6 @@ select-date-height-small = 2.75rem
 
     .SelectDates__SelectMonth
         flex-grow 2
-
-    .SelectDates__SelectYear,
-    .SelectDates__SelectMonth
-        height 100%
 
 .SelectDates__Button
     cursor pointer
