--- a/src/ducks/balance/History.styl
+++ b/src/ducks/balance/History.styl
@@ -1,4 +1,5 @@
 @require '~styles/mixins.styl'
+@require '~styles/variables.styl'
 
 .History
     background-color dodgerBlue
@@ -28,5 +29,15 @@
     font-weight bold
     color #a2c4f9
 
-.History__chartContainer
+.HistoryChart
     overflow-y auto
+    background-color dodgerBlue
+    @extend $full-width
+
+    +small-screen()
+        margin-top (- content-padding-small)
+
+.History .HistoryChart
+    margin-left 0
+    margin-right 0
+    margin-top 0
