--- a/src/ducks/balance/History.styl
+++ b/src/ducks/balance/History.styl
@@ -41,3 +41,12 @@
     margin-left 0
     margin-right 0
     margin-top 0
+
+.HistoryChartTooltip
+    display flex
+
+.HistoryChart__tooltipBalance
+    font-weight bold
+    border-left 1px solid dodgerBlue
+    padding-left 4px
+    margin-left 4px
