feat: Update chart tooltip position 🎨
Donuts tooltip is below the content in the middle of the donuts
With z-index we move Figure below the chart

--- a/src/ducks/categories/CategoriesChart.styl
+++ b/src/ducks/categories/CategoriesChart.styl
@@ -4,6 +4,7 @@
     height 182px
     margin-left auto
     position relative
+    z-index 1
 
     +small-screen()
         margin-right auto
@@ -22,6 +23,7 @@
     align-items center
 
 .CategoriesChart__FigureBlock
+    z-index -1
     display flex
     flex-direction column-reverse
     align-items center
