fix: Settings were saved as strings

--- a/src/ducks/settings/ToggleRow.styl
+++ b/src/ducks/settings/ToggleRow.styl
@@ -22,7 +22,8 @@ h5
     margin 0
     font-size .9em
 
-input[type='text'].ToggleRow__input
+input[type='text'].ToggleRow__input,
+input[type='number'].ToggleRow__input
     padding .5em .3em
     margin 0 5px
     width 4.5em
