chore: :wrench: get app slug from stack
Necessary to use the new cozy-bar navigation
and the home app detection

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -34,5 +34,6 @@
   data-cozy-icon-path="{{.IconPath}}"
   data-cozy-tracking="{{.Tracking}}"
   data-cozy-app-name-prefix="{{.AppNamePrefix}}"
+  data-cozy-app-slug="{{.AppSlug}}"
   <% } %>
 >
