--- a/src/index.ejs
+++ b/src/index.ejs
@@ -17,6 +17,7 @@
   <meta name="format-detection" content="telephone=no">
   <script src="cordova.js" defer></script>
   <% } else if (__STACK_ASSETS__) { %>
+  {{.CozyClientJS}}
   {{.CozyBar}}
   <% } %>
   <%  if (__STACK_ASSETS__ || (__DEV__ && __TARGET__ !== 'mobile')) { %>
