--- a/src/ducks/balance/Balance.styl
+++ b/src/ducks/balance/Balance.styl
@@ -24,15 +24,15 @@
     .Balance__row
         &:active
         &:focus
-            background alpha(dodgerBlue, 0.1)
+            background zircon
 
 .Balance__row--selected
     border-left 0.25rem dodgerBlue solid
-    background alpha(dodgerBlue, 0.1)
+    background zircon
 
 .Balance__row--selected-account-from-group
     border-left 0.25rem #cdced2 solid
-    background alpha(silver, 0.1)
+    background paleGrey
 
 .Balance__account_name
     maxed-flex-basis 25%
