feat(mobile): Add a modal during logout cleanup

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -37,4 +37,7 @@
   data-cozy-tracking="{{.Tracking}}"
   data-cozy-app-slug="{{.AppSlug}}"
   <% } %>
->
+></div>
+<% if (__TARGET__ === 'mobile') { %>
+<div id="logout-modal" style="position: relative; z-index: 100;"></div>
+<% } %>
