--- a/src/ducks/notifications/html/templates/transaction-greater.hbs
+++ b/src/ducks/notifications/html/templates/transaction-greater.hbs
@@ -1,6 +1,6 @@
 {{#extend "bank-layout"}}
   {{#content "emailTitle"}}
-      Notification de transactions
+    {{t 'Notifications.if_transaction_greater.email.title'}}
   {{/content}}
 
   {{#content "emailSubtitle"}}
