refactor: Differentiate types of titles

--- a/src/ducks/notifications/html/templates/health-bill-linked.hbs
+++ b/src/ducks/notifications/html/templates/health-bill-linked.hbs
@@ -1,6 +1,6 @@
 {{#extend "bank-layout"}}
   {{#content "emailTitle"}}
-    {{t 'Notifications.when_health_bill_linked.email.title'}}
+    {{t 'Notifications.when_health_bill_linked.email.innerTitle'}}
   {{/content}}
 
   {{#content "emailSubtitle"}}
