--- a/src/ducks/notifications/html/templates/balance-lower.hbs
+++ b/src/ducks/notifications/html/templates/balance-lower.hbs
@@ -1,6 +1,6 @@
 {{#extend "bank-layout"}}
   {{#content "emailTitle"}}
-    {{t 'Notifications.if_balance_lower.email.title'}}
+    {{t 'Notifications.if_balance_lower.email.innerTitle'}}
   {{/content}}
   {{#content "emailSubtitle"}}
     {{ formatDate date }}
