--- a/src/ducks/notifications/html/templates/health-bill-linked.hbs
+++ b/src/ducks/notifications/html/templates/health-bill-linked.hbs
@@ -32,6 +32,10 @@
                       {{ treatedByFormat this.reimbursements ../../../../bills }}
                       </a>
                   </td>
+                  <td width="100px" align='right'>
+                    <a href="{{../../../transactionsUrl}}" style="text-decoration: none;">{{ colored this.amount }}
+                    </a>
+                  </td>
                 </tr>
               </mj-table>
               {{#unless @last}}<mj-divider padding-bottom="0" padding-top="0" border-width="1px" border-color="#D0D2D5" />{{/unless}}
