feat(balanceLower): Improve separators in email

--- a/src/ducks/notifications/html/templates/balance-lower.hbs
+++ b/src/ducks/notifications/html/templates/balance-lower.hbs
@@ -26,9 +26,10 @@
                 <td width="150px" align='right'><span>{{ colored this.balance }}</span></td>
               </tr>
             </mj-table>
-              {{#unless @last}}<mj-divider padding-bottom="0" padding-top="0" border-width="1px" border-color="#d6d8da" />{{/unless}}
+              {{#unless @last}}<mj-divider padding-bottom="0" padding-top="0" border-width="1px" border-color="#ececec" />{{/unless}}
           {{/each }}
         </mj-text>
+        {{#unless @last}}<mj-divider padding-bottom="0" padding-top="0" border-width="1px" border-color="#d6d8da" />{{/unless}}
         </mj-column>
       </mj-section>
     {{/each}}
