feat(balanceLower): Increase spacing between institutions

--- a/src/ducks/notifications/html/templates/balance-lower.hbs
+++ b/src/ducks/notifications/html/templates/balance-lower.hbs
@@ -29,7 +29,7 @@
               {{#unless @last}}<mj-divider padding-bottom="0" padding-top="0" border-width="1px" border-color="#ececec" />{{/unless}}
           {{/each }}
         </mj-text>
-        {{#unless @last}}<mj-divider padding-bottom="0" padding-top="0" border-width="1px" border-color="#d6d8da" />{{/unless}}
+        {{#unless @last}}<mj-divider padding-bottom="8px" padding-top="8px" border-width="1px" border-color="#d6d8da" />{{/unless}}
         </mj-column>
       </mj-section>
     {{/each}}
