--- a/src/ducks/notifications/html/templates/transaction-greater.hbs
+++ b/src/ducks/notifications/html/templates/transaction-greater.hbs
@@ -38,10 +38,11 @@
                   </td>
                 </tr>
               </mj-table>
-              {{#unless @last}}<mj-divider padding-bottom="0" padding-top="0" border-width="1px" border-color="#D0D2D5" />{{/unless}}
+              {{#unless @last}}<mj-divider padding-bottom="0" padding-top="0" border-width="1px" border-color="#ececec" />{{/unless}}
             {{/each}}
           {{/eachPair }}
         </mj-text>
+        {{#unless @last}}<mj-divider padding-bottom="8px" padding-top="8px" border-width="1px" border-color="#d6d8da" />{{/unless}}
         </mj-column>
       </mj-section>
     {{/each}}
