feat: Add Header component

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -4,6 +4,7 @@
 @require './text.styl'
 @require 'settings/breakpoints'
 @require '~styles/variables.styl'
+@require './palette.styl'
 
 h4
     margin-top 0
