feat: Update chart design

--- a/src/components/Chart/LineChart.styl
+++ b/src/components/Chart/LineChart.styl
@@ -1,21 +1,6 @@
 .LineChart
+    display inline-block
     position relative
 
-.LineChartTooltip
-    position absolute
-    background-color white
-    color dodgerBlue
-    border-radius 2px
-    font-size 0.6875rem
-    padding-left 2px
-    padding-right 2px
-    line-height 1.45
-    white-space nowrap
-
-    // &::after
-    //     content ''
-    //     position absolute
-    //     top 100%
-    //     right 2px
-    //     border 3px solid transparent
-    //     border-top-color white
+.LineChartSVG
+    vertical-align bottom
