--- a/src/ducks/balance/History.styl
+++ b/src/ducks/balance/History.styl
@@ -3,13 +3,13 @@
 
 .History
     padding-top: 1.5rem
-    padding-bottom: 1rem
+    padding-bottom .5rem
     text-align center
     color white
 
     +small-screen()
         padding-top: .5rem
-        padding-bottom: .5rem
+        padding-bottom 0
 
 .History__currentBalance
     text-align center
@@ -32,6 +32,7 @@
     color #a2c4f9
 
 .HistoryChart
+    padding-bottom .5rem
     overflow-y auto
     background-color dodgerBlue
     @extend $full-width
