feat: Fix header height

--- a/src/ducks/balance/Balance.styl
+++ b/src/ducks/balance/Balance.styl
@@ -84,3 +84,9 @@
 
     .Balance__bank
         maxed-flex-basis 60%
+
+.Balance_Header_WithChart
+    min-height 245px
+
+    +small-screen()
+        min-height 167px
