--- a/src/ducks/transactions/header/TableHead.styl
+++ b/src/ducks/transactions/header/TableHead.styl
@@ -1,5 +1,23 @@
-.TableHead
+.TableHead_default
     background white
     marginTop 1rem
     marginLeft -2rem
     marginRight -2rem
+
+.TableHead_primary
+    background-color var(--primary-light)
+
+    thead
+        tr
+            border 0
+            padding .5rem 0
+
+            td
+                padding 0 1rem
+                font-size .75rem
+                line-height 1rem
+                font-weight bold
+                color var(--primary-contrast-text)
+
+            td + td
+                border-left 1px solid var(--primary)
