--- a/src/components/Header/Header.styl
+++ b/src/components/Header/Header.styl
@@ -1,5 +1,15 @@
 @require 'settings/breakpoints'
 
+.HeaderFixed
+    position sticky
+    position -webkit-sticky
+    z-index 1
+    top 0
+    box-shadow 0 2px 4px 0 rgba(0, 0, 0, 0.24), 0 0 4px 0 rgba(0, 0, 0, 0.16)
+
+    +medium-screen()
+        top 3rem
+
 .HeaderColor_default
     background-color var(--white)
 
