fix: Remove shadow on old design

--- a/src/components/Header/Header.styl
+++ b/src/components/Header/Header.styl
@@ -5,7 +5,6 @@
     position -webkit-sticky
     z-index 1
     top 0
-    box-shadow 0 2px 4px 0 rgba(0, 0, 0, 0.24), 0 0 4px 0 rgba(0, 0, 0, 0.16)
 
     +medium-screen()
         top 3rem
@@ -15,3 +14,6 @@
 
 .HeaderColor_primary
     background-color var(--primary)
+
+.HeaderColor_primary.HeaderFixed
+    box-shadow 0 2px 4px 0 rgba(0, 0, 0, 0.24), 0 0 4px 0 rgba(0, 0, 0, 0.16)
