--- a/src/ducks/transactions/Transactions.styl
+++ b/src/ducks/transactions/Transactions.styl
@@ -2,6 +2,9 @@
 @require '~styles/mixins.styl'
 @require 'settings/breakpoints'
 
+.ScrollingElement
+    overflow-y auto
+
 .ColumnSizeDesc
     maxed-flex-basis 40%
     padding-left 4rem
