fix(BackButton): Alignment on AccountSettings and GroupSettings titles

--- a/src/components/BackButton/style.styl
+++ b/src/components/BackButton/style.styl
@@ -1,6 +1,6 @@
 .back-arrow.back-arrow
     color coolGrey
-    float left
+    vertical-align baseline
     font-size 1.25rem
     line-height 1.6875
     margin-right 1.5rem
