feat: Add color param on SelectDates

--- a/src/components/SelectDates/SelectDates.styl
+++ b/src/components/SelectDates/SelectDates.styl
@@ -26,6 +26,10 @@ select-date-height-small = 2.75rem
         svg
             margin-top 5px
 
+.SelectDatesColor_primary
+    .SelectDates__chip
+         background-color var(--primary-light)
+
 .SelectDates__Select
     color slateGrey
 
