fix: Header size 😱

--- a/src/ducks/categories/CategoriesHeader.styl
+++ b/src/ducks/categories/CategoriesHeader.styl
@@ -4,6 +4,7 @@
     display flex
     justify-content space-between
     align-items flex-start
+    flex-shrink 0
 
     +small-screen()
         flex-direction column
