fix(ToggleRow): Toggle vertical alignment

--- a/src/ducks/settings/ToggleRow.styl
+++ b/src/ducks/settings/ToggleRow.styl
@@ -41,3 +41,6 @@ input[type='number'].ToggleRow__input
         position absolute
         margin-left -1.5em
         margin-top .6em
+
+.ToggleRow__toggle span
+    vertical-align middle
