refactor: Use css variable

--- a/src/components/AccountSharingStatus/AccountSharingStatus.styl
+++ b/src/components/AccountSharingStatus/AccountSharingStatus.styl
@@ -1,16 +1,15 @@
-darkblue=#32363f
+@require 'settings/palette'
 
 .account-sharing-tooltip
     :global
         .react-hint__content
-            background darkblue
+            background charcoalGrey
 
     &:global(.react-hint--top)::after
-        border-top-color darkblue
+        border-top-color charcoalGrey
     &:global(.react-hint--bottom)::after
-        border-bottom-color darkblue
+        border-bottom-color charcoalGrey
     &:global(.react-hint--left)::after
-        border-left-color darkblue
+        border-left-color charcoalGrey
     &:global(.react-hint--right)::after
-        border-right-color darkblue
-
+        border-right-color charcoalGrey
