--- a/src/components/SharingIcon/SharingIcon.styl
+++ b/src/components/SharingIcon/SharingIcon.styl
@@ -1,6 +1,4 @@
-
-purple=#a75bcb
-green=#35ce68
+@require 'settings/palette'
 
 .sharing-icon
     background-image embedurl('../assets/icons/ui/share.svg')
@@ -16,7 +14,7 @@ green=#35ce68
     margin-left .5rem
 
 .sharing-icon--to
-    background-color green
+    background-color emerald
 
 .sharing-icon--from
-    background-color purple
+    background-color portage
