--- a/src/ducks/balance/Balance.styl
+++ b/src/ducks/balance/Balance.styl
@@ -1,4 +1,5 @@
 @require 'settings/breakpoints'
+@require 'settings/palette'
 
 .Balance_HeaderColor_primary
     padding-top: 1.5rem
@@ -31,4 +32,4 @@
     line-height 1rem
     min-height 1rem
     font-weight bold
-    color #a2c4f9
+    color rgba(255, 255, 255, 0.64)
