--- a/src/ducks/balance/components/BalanceRow.styl
+++ b/src/ducks/balance/components/BalanceRow.styl
@@ -38,5 +38,5 @@
     background zircon
 
 .BalanceRow--selected-account-from-group
-    border-left 0.25rem #cdced2 solid
+    border-left 0.25rem silver solid
     background paleGrey
