--- a/src/styles/palette.styl
+++ b/src/styles/palette.styl
@@ -2,7 +2,9 @@
 
 // @stylint off
 :root
-    --primary-contrast-text white
 
     --primary dodgerBlue
-    --primary-light #5c9df5
+
+    // TODO: refactoring after new color on cozy-ui
+    --primary-contrast-text white
+    --primary-light #5c9df5 // lighten(dodgerBlue, 24)
