--- a/src/ducks/categories/CategoriesChart.styl
+++ b/src/ducks/categories/CategoriesChart.styl
@@ -21,6 +21,7 @@
     flex-direction column
     justify-content center
     align-items center
+    z-index -1
 
 .CategoriesChart__FigureBlock
     z-index -1
