feat: Use color on Title

--- a/src/ducks/account/AccountSwitch.styl
+++ b/src/ducks/account/AccountSwitch.styl
@@ -154,5 +154,11 @@
 .DownArrow
     margin-left 0.5rem
 
+.DownArrowColor_default
+    color black
+
+.DownArrowColor_primary
+    color var(--primary-contrast-text)
+
 .AccountSwitch--small .DownArrow
     margin-left 0.375rem
