--- a/src/ducks/balance/History.styl
+++ b/src/ducks/balance/History.styl
@@ -1,19 +1,8 @@
-@require '~styles/mixins.styl'
-@require '~styles/variables.styl'
-
 .HistoryChart
     padding-bottom .5rem
     overflow-y auto
     background-color dodgerBlue
-    @extend $full-width
-
-    +small-screen()
-        margin-top (- content-padding-small)
-
-.History .HistoryChart
-    margin-left 0
-    margin-right 0
-    margin-top 0
+    margin 0
 
 .HistoryChartTooltip
     display flex
