refactor: Update mobile view

--- a/src/ducks/balance/History.styl
+++ b/src/ducks/balance/History.styl
@@ -1,8 +1,10 @@
 .HistoryChart
-    padding-bottom .5rem
     overflow-y auto
     background-color dodgerBlue
     margin 0
+
+.History .HistoryChart
+    padding-bottom .5rem
 
 .HistoryChartTooltip
     display flex
