refactor(Info): Use color variables

--- a/src/components/Info/styles.styl
+++ b/src/components/Info/styles.styl
@@ -4,7 +4,7 @@
     background paleGrey
     display flex
     align-items center
-    background-color #fff2f2
+    background-color var(--chablis)
 
 .infos--icon
     width rem(16)
@@ -20,4 +20,4 @@
     width 100%
 
 .infos--title
-    color #f52d2d
+    color var(--monza)
