style(SelectDates): Use 1px border

--- a/src/components/SelectDates/SelectDates.styl
+++ b/src/components/SelectDates/SelectDates.styl
@@ -29,14 +29,14 @@ select-date-height-small = 2.75rem
         width select-date-height
 
     .SelectDates__separator
-        border-left: 0.063rem solid var(--silver)
+        border-left 1px solid var(--silver)
 
     .SelectDates__chip
         svg
             color var(--coolGrey)
 
     +small-screen()
-        border-bottom: 1px solid var(--silver)
+        border-bottom 1px solid var(--silver)
         background var(--white)
         width auto
         height select-date-height-small
@@ -49,7 +49,7 @@ select-date-height-small = 2.75rem
     border-bottom 0
 
     .SelectDates__separator
-        border-left: 0.063rem solid var(--primary)
+        border-left 1px solid var(--primary)
 
     .SelectDates__chip
         background-color var(--primary-light)
