style(Toggle): Background color

--- a/src/ducks/categories/CategoriesHeader.styl
+++ b/src/ducks/categories/CategoriesHeader.styl
@@ -25,6 +25,9 @@
         padding-top 1rem
         color var(--primary-contrast-text)
 
+        input:checked + label
+            background-color var(--primary-light)
+
     +small-screen()
         &.default, &.primary
             padding-top 0
