refactor(CategoriesHeader): Padding is on toggle

--- a/src/ducks/categories/CategoriesHeader.styl
+++ b/src/ducks/categories/CategoriesHeader.styl
@@ -23,6 +23,7 @@
 
     &.primary
         padding-top 1rem
+        padding-bottom 1rem
         color var(--primary-contrast-text)
 
         input:checked + label
