--- a/src/ducks/categories/CategoriesChart.styl
+++ b/src/ducks/categories/CategoriesChart.styl
@@ -12,6 +12,9 @@
         border-radius 50%
         border 2px solid white
 
+        +small-screen()
+            margin-top 0
+
     +small-screen()
         margin-right auto
         margin-top 1.5rem
