style(Breadcrumb): Use primary color

--- a/src/ducks/categories/CategoriesHeader.styl
+++ b/src/ducks/categories/CategoriesHeader.styl
@@ -34,4 +34,7 @@
             padding-top 0
 
 .CategoriesHeader__Breadcrumb
-    margin-top 2.375rem
+    &.default
+        margin-top 2.375rem
+    &.primary
+        margin-top 1rem
