feat: Add styles for new accounts list

--- a/src/ducks/balance/styles.styl
+++ b/src/ducks/balance/styles.styl
@@ -3,3 +3,25 @@
 
 .GroupPannelSummary__figureCurrency
     color inherit
+
+.AccountsList
+    flex 1
+    margin 0
+    padding-left 0
+    list-style none
+
+.AccountsList__item
+    display flex
+    height 64px
+    align-items center
+    justify-content space-between
+    border-top 1px solid var(--silver)
+    padding-left 16px
+    padding-right 8px
+    background-color white
+    color var(--charcoalGrey)
+
+.AccountsList__itemFigure
+    font-size 14px
+    font-weight normal
+    color inherit
