refactor(AccountsList): Use rem

--- a/src/ducks/balance/styles.styl
+++ b/src/ducks/balance/styles.styl
@@ -12,16 +12,16 @@
 
 .AccountsList__item
     display flex
-    height 64px
+    height 4rem
     align-items center
     justify-content space-between
-    border-top 1px solid var(--silver)
-    padding-left 16px
-    padding-right 8px
+    border-top 0.0625rem solid var(--silver)
+    padding-left 1rem
+    padding-right 0.5rem
     background-color white
     color var(--charcoalGrey)
 
 .AccountsList__itemFigure
-    font-size 14px
+    font-size 0.875rem
     font-weight normal
     color inherit
