--- a/src/ducks/balance/components/AccountsList.styl
+++ b/src/ducks/balance/components/AccountsList.styl
@@ -14,6 +14,7 @@
     padding-right 0.5rem
     background-color white
     color var(--charcoalGrey)
+    cursor pointer
 
 .AccountsList__itemFigure
     font-size 0.875rem
