refactor(ExpansionPanelSummary): Remove specific styles

--- a/src/ducks/balance/components/GroupPanel.styl
+++ b/src/ducks/balance/components/GroupPanel.styl
@@ -1,5 +1,7 @@
-.GroupPannelSummary__figure
-    padding-right 0 !important
+.GroupPanelSummary__content
+    display flex
+    flex 1
+    justify-content space-between
 
-.GroupPannelSummary__figureCurrency
+.GroupPanelSummary__figureCurrency
     color inherit
