feat(GroupPanel): Filter group on summary content click

--- a/src/ducks/balance/components/GroupPanel.styl
+++ b/src/ducks/balance/components/GroupPanel.styl
@@ -3,5 +3,14 @@
     flex 1
     justify-content space-between
 
+    &::before
+        content ''
+        position absolute
+        background-color transparent
+        left 36px
+        top 0
+        right 0
+        bottom 0
+
 .GroupPanelSummary__figureCurrency
     color inherit
