feat(Balance): Panels overflows on chart area

--- a/src/ducks/balance/Balance.styl
+++ b/src/ducks/balance/Balance.styl
@@ -33,3 +33,15 @@
     min-height 1rem
     font-weight bold
     color rgba(255, 255, 255, 0.64)
+
+.Balance__panelsContainer
+    position relative
+
+    &::before
+        content ''
+        position absolute
+        top 0
+        left 0
+        right 0
+        height 44px
+        background-color var(--primary)
