refactor(AccountsList): Update classnames

--- a/src/ducks/balance/components/AccountsList.styl
+++ b/src/ducks/balance/components/AccountsList.styl
@@ -4,7 +4,7 @@
     padding-left 0
     list-style none
 
-.AccountsList__item
+.AccountsListItem
     display flex
     height 4rem
     align-items center
@@ -16,7 +16,7 @@
     color var(--charcoalGrey)
     cursor pointer
 
-.AccountsList__itemFigure
+.AccountsListItem__figure
     font-size 0.875rem
     font-weight normal
     color inherit
