feat(AccountsList): Add desktop layout

--- a/src/ducks/balance/components/AccountsList.styl
+++ b/src/ducks/balance/components/AccountsList.styl
@@ -1,3 +1,5 @@
+@require 'settings/breakpoints'
+
 .AccountsList
     flex 1
     margin 0
@@ -17,12 +19,21 @@
     color var(--charcoalGrey)
     cursor pointer
 
+    +small-screen('min')
+        grid-template-columns 3fr 1fr 1fr 1fr
+        grid-column-gap 67px
+
 .AccountsListItem__figure
     font-size 0.875rem
     font-weight normal
     color inherit
+    justify-self end
 
 .AccountsListItem__column
     white-space nowrap
     overflow hidden
     text-overflow ellipsis
+
+.AccountsListItem__column--secondary
+    font-size 0.875rem
+    color var(--coolGrey)
