feat(BalancePanels): Set action buttons min height

--- a/src/ducks/balance/BalancePanels.styl
+++ b/src/ducks/balance/BalancePanels.styl
@@ -1,3 +1,5 @@
+@require 'settings/breakpoints'
+
 .BalancePanels__actions
     display flex
     padding-left 4px
@@ -8,6 +10,7 @@
     flex 1
     text-align center
     max-width none
+    min-height 3rem
     padding-right 1rem
     padding: 0.375rem 1rem
     border-radius 4px
