fix(Balance): Set the right horizontal padding on page with panels

--- a/src/ducks/balance/Balance.styl
+++ b/src/ducks/balance/Balance.styl
@@ -45,3 +45,7 @@
         right 0
         height 44px
         background-color var(--primary)
+
+    +small-screen()
+        padding-left 0.5rem
+        padding-right 0.5rem
