--- a/src/ducks/balance/components/AccountRow.styl
+++ b/src/ducks/balance/components/AccountRow.styl
@@ -31,3 +31,18 @@
 .AccountRow__column--secondary
     font-size 0.875rem
     color var(--coolGrey)
+
+.AccountRow__label
+    text-overflow ellipsis
+    overflow hidden
+    line-height 1.25
+    margin-bottom 0.125rem
+
+.AccountRow__updatedAt
+    font-size 0.75rem
+    color var(--coolGrey)
+    line-height 1.5
+
+.AccountRow__updatedAtIcon
+    vertical-align top
+    margin-right 0.25rem
