feat(AccountRow): Update date is red when greater than one day

--- a/src/ducks/balance/components/AccountRow.styl
+++ b/src/ducks/balance/components/AccountRow.styl
@@ -43,6 +43,9 @@
     color var(--coolGrey)
     line-height 1.5
 
+.AccountRow__updatedAt--old
+    color var(--pomegranate)
+
 .AccountRow__updatedAtIcon
     vertical-align top
     margin-right 0.25rem
