feat(BalancePanels): Add padding on bottom
So Claudy does not cover actions

--- a/src/ducks/balance/BalancePanels.styl
+++ b/src/ducks/balance/BalancePanels.styl
@@ -1,5 +1,9 @@
 @require 'settings/breakpoints'
 
+.BalancePanels
+    +small-screen('min')
+        padding-bottom 6rem
+
 .BalancePanels__actions
     display flex
     padding-left 4px
