--- a/src/ducks/balance/components/AccountRow.styl
+++ b/src/ducks/balance/components/AccountRow.styl
@@ -38,6 +38,14 @@
     line-height 1.25
     margin-bottom 0.125rem
 
+.AccountRow--hasWarning
+    .AccountRow__figure
+        color var(--texasRose)
+
+.AccountRow--hasAlert
+    .AccountRow__figure
+        color var(--pomegranate)
+
 .AccountRow__updatedAt
     font-size 0.75rem
     color var(--coolGrey)
